# template-python-agent

./: CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  build_dist.py  build_package.py  build_package.sh  build_workflow.py  consolidate_to_ailf.sh  dev_setup.sh  migrate_to_src_layout.sh  pyproject.toml  requirements.txt  setup.py  template-python-dev.code-workspace  test_consolidation.sh  test_installation.py  test_redis_impl.sh  update_imports.sh
.devcontainer/: Dockerfile  check-environment.sh  devcontainer.json  post-attach.sh  post-create.sh  start-redis.sh
.github/workflows/: integration_tests.yml  publish_to_pypi.yml
ailf/: __init__.py
ailf/cognition/: __init__.py  base.py  intent_refiner.py  processors.py  prompt_library.py  prompts.py  react_processor.py  task_planner.py
ailf/communication/: __init__.py  acp_handler.py  handler.py
ailf/feedback/: __init__.py  adaptive_learning_manager.py  interaction_logger.py  performance_analyzer.py
ailf/interaction/: __init__.py  adapters.py  manager.py
ailf/memory/: __init__.py  base.py  file_memory.py  in_memory.py  long_term.py  redis_cache.py  redis_memory.py  reflection.py  reflection_engine.py  short_term.py
ailf/messaging/: __init__.py  base.py  mock_redis_streams.py  redis_streams.py
ailf/registry_client/: __init__.py  base.py  http_client.py
ailf/routing/: __init__.py  execution.py  flow.py
ailf/schemas/: __init__.py  acp.py  agent.py  cognition.py  feedback.py  feedback_models.py  interaction.py  mcp.py  memory.py  prompt_engineering.py  routing.py  tooling.py
ailf/schemas/feedback/: __init__.py  models.py
ailf/tooling/: __init__.py  manager.py  selector.py
docs/: agent-components.md  ailf_roadmap.md
docs/source/: ai_module_example.md  capabilities_map.md  component_relationships.md  migration_guide.md
docs/source/api/: redis.md
docs/source/guides/: async_tasks.md  celery.md  logging.md  messaging.md  redis.md  redis_messaging.md
examples/: ai_engine_example.py  ailf_redis_agents.py  ailf_redis_example.py  ailf_tooling_integration_test.py  async_redis_celery_example.py  custom_ai_engine.py  doc_helper_client.py  integrated_agent_system.py  mcp_async_redis_example.py  mcp_server_example.py  multi_protocol_agent.py  redis_pubsub_example.py  redis_stream_example.py  storage_usage_example.py  zmq_device_example.py
pyutils/: __init__.py
schemas/: __init__.py  ai.py  mcp.py  storage.py  test.py
schemas/api/: __init__.py
schemas/messaging/: __init__.py  devices.py  zmq.py
setup/: dev_setup.py
setup/requirements/: README.md  ai.txt  base.txt  cloud.txt  dev.txt  mcp.txt  prod.txt  redis.txt  zmq.txt
src/ailf/: __init__.py  ai_engine.py  async_tasks.py  base_mcp.py  documentation.py  gcs_config_stash.py  github_client.py  py.typed  setup_storage.py  web_scraper.py
src/ailf/ai/: anthropic_engine.py  engine_factory.py  openai_engine.py
src/ailf/cloud/: gcs_storage.py
src/ailf/core/: __init__.py  ai_engine_base.py  cached_storage.py  cloud_storage.py  database.py  local_storage.py  logger.py  logger_base.py  logging.py  monitoring.py  openai_engine.py  secrets.py  storage.py  storage_base.py
src/ailf/mcp/: __init__.py
src/ailf/messaging/: __init__.py  async_redis.py  mock_redis.py  redis.py  zmq.py  zmq_device_manager.py  zmq_devices.py
src/ailf/schemas/: __init__.py  ai.py  mcp.py  redis.py  zmq_devices.py
src/ailf/workers/: __init__.py  celery_app.py  tasks.py
tests/: conftest.py
tests/integration/: __init__.py  conftest.py  test_ailf_redis.py
tests/unit/: test_basic.py
utils/: __init__.py  database.py
utils/ai/: __init__.py  engine.py
utils/cloud/: __init__.py  gcs.py  secrets.py
utils/core/: __init__.py  logging.py  monitoring.py
utils/messaging/: __init__.py  devices.py  zmq.py
utils/storage/: __init__.py  local.py  setup.py
(+26 files in other folders)
